Remake API in Express

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,16 +1,12 @@
-FROM ruby:4-slim
+FROM node:20-slim
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
-    && rm -rf /var/lib/apt/lists/*
-
-COPY Gemfile Gemfile.lock* ./
-RUN bundle install
+COPY package*.json ./
+RUN npm install
 
 COPY . .
 
-EXPOSE 3001
+EXPOSE 7071
 
-CMD ["bundle", "exec", "puma", "-p", "3001", "-b", "tcp://0.0.0.0"]
+CMD ["npm", "start"]
